Managed to statically build attica.
Signed-off-by: Alexandru Tudorica <tudalex@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,5 @@
-project(attica)
+project(Orion)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_LIBATTICA_VERSION_MAJOR 0)
-set(CMAKE_LIBATTICA_VERSION_MINOR 2)
-set(CMAKE_LIBATTICA_VERSION_PATCH 2)
-set(CMAKE_LIBATTICA_VERSION_STRING  "${CMAKE_LIBATTICA_VERSION_MAJOR}.${CMAKE_LIBATTICA_VERSION_MINOR}.${CMAKE_LIBATTICA_VERSION_PATCH}")
 
 SET(CMAKE_BUILD_TYPE "Release")
 cmake_minimum_required(VERSION 2.6)
@@ -11,27 +7,18 @@ add_definitions( -DQT_NO_CAST_FROM_ASCII )
 add_definitions( -DQT_NO_CAST_TO_ASCII )
 add_definitions(-DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS)
 
-
-
-# Enable unit testing
-option(ATTICA_ENABLE_TESTS "Enable tests")
-if (ATTICA_ENABLE_TESTS)
-    enable_testing()
-endif (ATTICA_ENABLE_TESTS)
-
-
-
-
 add_subdirectory(attica)
 
 set(testSRCS main.cpp mainwindow.cpp)
 set(testHDRS mainwindow.h)
 QT4_WRAP_CPP(test_MOC_SRCS ${testHDRS})
 find_package(Qt4 REQUIRED)
+
 include_directories( ${QT_INCLUDES} )
 
 INCLUDE(${QT_USE_FILE})
 ADD_DEFINITIONS(${QT_DEFINITIONS})
+
 add_executable(test ${testSRCS} ${test_MOC_SRCS})
-target_link_libraries(test attica ${QT_LIBRARIES} )
+target_link_libraries(test ${QT_LIBRARIES} attica)
 
